--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,9 +71,6 @@ jobs:
           paths: 
            - .
 
- # trying to get the test reports from parallel runs to be aggregated
-  # - most likely just output to json, then create just one big json from it
-  # - then create lcov and junit reports from it
   test_backend:
     executor: backend_test
     environment:
@@ -92,11 +89,6 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
-          name: "Debug directory"
-          command: |
-            pwd
-            ls -la
-      - run:
           name: "Install psql client"
           command: |
             sudo apt-get update
@@ -108,11 +100,11 @@ jobs:
           name: "Create extensions"
           command: | 
             psql -d circle_test -U root -p 5432 -h localhost -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
-      - run:
-          name: "Parallel #"
-          command: |
-            echo $CIRCLE_NODE_INDEX
-            echo ${CIRCLE_NODE_INDEX}
+      # - run:
+      #     name: "Parallel #"
+      #     command: |
+      #       echo $CIRCLE_NODE_INDEX
+      #       echo ${CIRCLE_NODE_INDEX}
       - run:
           name: "Run tests"
           command: |
@@ -134,6 +126,7 @@ jobs:
           name: "Upload coverage"
           command: bash <(curl -s https://codecov.io/bash)
 
+  # could combine the artifacts in this step if needed, now the codecov/junit stuff combines automatically
   # upload_backend_coverage:
   #   executor: backend_test
   #   working_directory: ~/project/backend/coverage
@@ -152,6 +145,8 @@ jobs:
   #         command: |
   #           echo "Not implemented yet"
   
+  # could also be only for master/staging since now we're doing npm install earlier, and if it passes there, it will pass here too
+  # - only that the node version is different in backend image?
   build_backend:
     executor: backend_build
     steps:
@@ -183,11 +178,6 @@ jobs:
           at: ~/project
       - setup_remote_docker:
           version: 19.03.13
-      - run:
-          name: "Debug directory"
-          command: |
-            pwd
-            ls -la
       - run:
           name: "Restore image"
           command: |
