Test scaffolding for auth (#885)
* Bump ws from 7.4.2 to 7.5.6 in /frontend

Bumps [ws](https://github.com/websockets/ws) from 7.4.2 to 7.5.6.
- [Release notes](https://github.com/websockets/ws/releases)
- [Commits](https://github.com/websockets/ws/compare/7.4.2...7.5.6)

---
updated-dependencies:
- dependency-name: ws
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump path-parse from 1.0.6 to 1.0.7 in /frontend

Bumps [path-parse](https://github.com/jbgutierrez/path-parse) from 1.0.6 to 1.0.7.
- [Release notes](https://github.com/jbgutierrez/path-parse/releases)
- [Commits](https://github.com/jbgutierrez/path-parse/commits/v1.0.7)

---
updated-dependencies:
- dependency-name: path-parse
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump hosted-git-info from 2.7.1 to 2.8.9 in /frontend

Bumps [hosted-git-info](https://github.com/npm/hosted-git-info) from 2.7.1 to 2.8.9.
- [Release notes](https://github.com/npm/hosted-git-info/releases)
- [Changelog](https://github.com/npm/hosted-git-info/blob/v2.8.9/CHANGELOG.md)
- [Commits](https://github.com/npm/hosted-git-info/compare/v2.7.1...v2.8.9)

---
updated-dependencies:
- dependency-name: hosted-git-info
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* re-add sheets to _document

* fixed websocket subscriber - node-redis api change

* refactored other handlers; added test strategy

* some test setup

* refactored handlers back to async; signup works

* try if the tests work

* run npm ci before auth test

* fix certificates not found in test

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,8 +86,22 @@ jobs:
       - docker/install-docker-tools:
           docker-compose-version: 1.29.2
       - run:
+          name: "Install deps for tests"
+          command: |
+            cd auth
+            npm ci
+            cd ..
+      - run:
+          name: "Tests"
+          command: "bin/run-auth-tests.sh"
+      - run:
           name: "Build image"
           command: "bin/build-docker-auth.sh"
+      - store_test_results:
+          path: ~/project/auth/coverage/junit/
+      - store_artifacts:
+          path: ~/project/auth/coverage/jest
+          destination: auth-tests
       - run:
           name: "Push image if on master"
           command: "bin/push-docker-auth-image.sh"  
