--- a/auth/package.json
+++ b/auth/package.json
@@ -4,25 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "dev": "ts-node-dev --no-notify --respawn --files src/server.ts --transpileOnly",
+    "dev": "NODE_ENV=development ts-node-dev --no-notify --respawn --files src/server.ts --transpileOnly",
     "start": "ts-node --transpile-only --files src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@prettier/plugin-xml": "^1.1.0",
+    "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.1",
     "@types/passport": "^1.0.7",
     "@types/passport-saml-metadata": "^2.2.1",
     "@types/xml-crypto": "^1.4.2",
     "dotenv": "^10.0.0",
+    "jest": "^27.4.7",
+    "jest-junit": "^13.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
@@ -30,10 +34,12 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@voxpelli/passport-dummy": "^1.0.0",
     "@xmldom/xmldom": "^0.7.5",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "fast-xml-parser": "^4.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "morgan": "^1.10.0",
