--- a/auth/package.json
+++ b/auth/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
+    "nock": "^13.2.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
