--- a/backend/package.json
+++ b/backend/package.json
@@ -56,16 +56,17 @@
     "@sentry/integrations": "^6.16.1",
     "@sentry/node": "^6.16.1",
     "@types/compression": "^1.7.2",
-    "@types/graphql-upload": "^8.0.7",
+    "@types/graphql-upload": "^8.0.10",
     "@types/lodash": "^4.14.178",
-    "@types/luxon": "^2.0.8",
+    "@types/luxon": "^2.0.9",
     "@types/morgan": "^1.9.3",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^4.0.11",
     "@types/shortid": "0.0.29",
-    "@types/uuid": "^8.3.3",
-    "@types/websocket": "^1.0.4",
+    "@types/uuid": "^8.3.4",
+    "@types/websocket": "^1.0.5",
     "@types/yup": "^0.29.13",
+    "JSONStream": "^1.3.5",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "axios": "^0.24.0",
@@ -79,7 +80,6 @@
     "graphql-scalars": "^1.14.1",
     "graphql-upload": "^13.0.0",
     "helmet": "^4.6.0",
-    "JSONStream": "^1.3.5",
     "knex": "^0.95.14",
     "lodash": "^4.17.20",
     "luxon": "^2.2.0",
@@ -91,9 +91,9 @@
     "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.12.0",
     "nodemailer": "^6.7.2",
-    "pg": "^8.7.1",
-    "pg-query-stream": "^4.2.1",
-    "redis": "^4.0.1",
+    "pg": "^8.7.3",
+    "pg-query-stream": "^4.2.3",
+    "redis": "^4.0.3",
     "sharp": "^0.29.3",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
@@ -104,8 +104,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/faker": "^5.5.9",
@@ -114,18 +114,19 @@
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
-    "graceful-fs": "^4.2.8",
+    "graceful-fs": "^4.2.9",
     "graphql-request": "^3.7.0",
     "jest": "^27.4.5",
     "jest-junit": "^13.0.0",
+    "jest-mock": "^27.5.1",
     "locate-path": "^7.0.0",
     "nanoid": "^3.1.30",
-    "nock": "^13.2.1",
+    "nock": "^13.2.4",
     "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
