--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,6 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@date-io/core": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
     "@emotion/react": "^11.7.1",
@@ -35,8 +33,8 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.8",
-    "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/mdx": "1.6.22",
     "@monaco-editor/react": "^4.3.1",
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.60",
@@ -52,8 +50,6 @@
     "@zeit/next-typescript": "^1.1.1",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.25.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-module-resolver": "^4.1.0",
     "compression": "^1.7.4",
     "express": "^4.17.2",
     "formik": "^2.2.9",
@@ -94,9 +90,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.16.7",
     "@cypress/code-coverage": "^3.8.5",
-    "@emotion/babel-plugin": "^11.7.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@testing-library/cypress": "^7.0.6",
     "@types/luxon": "^2.0.9",
@@ -106,8 +100,6 @@
     "@types/styled-jsx": "^3.4.4",
     "@types/testing-library__cypress": "^5.0.8",
     "apollo": "^2.33.9",
-    "babel-plugin-import": "^1.13.3",
-    "babel-plugin-lodash": "^3.3.4",
     "cors": "^2.8.5",
     "cypress": "^6.0.1",
     "cypress-image-snapshot": "^4.0.0",
