--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.2",
     "@types/luxon": "^2.0.9",
     "@types/papaparse": "^5.3.2",
     "@types/react": "^17.0.39",
