--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "os-name": "^5.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.10",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
