--- a/auth/package.json
+++ b/auth/package.json
@@ -13,42 +13,43 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@prettier/plugin-xml": "^1.1.0",
+    "@prettier/plugin-xml": "^1.2.0",
     "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.1",
+    "@types/node": "^17.0.18",
     "@types/passport": "^1.0.7",
     "@types/passport-saml-metadata": "^2.2.1",
     "@types/xml-crypto": "^1.4.2",
-    "dotenv": "^10.0.0",
-    "jest": "^27.4.7",
+    "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
     "jest-junit": "^13.0.0",
-    "nock": "^13.2.2",
+    "nock": "^13.2.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@voxpelli/passport-dummy": "^1.0.0",
-    "@xmldom/xmldom": "^0.7.5",
-    "axios": "^0.24.0",
+    "@xmldom/xmldom": "^0.8.1",
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "fast-xml-parser": "^4.0.1",
-    "graphql": "^16.2.0",
-    "graphql-request": "^3.7.0",
+    "fast-xml-parser": "^4.0.3",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "morgan": "^1.10.0",
     "nookies": "^2.5.2",
     "passport": "^0.5.2",
-    "passport-saml": "^3.2.0",
+    "passport-saml": "^3.2.1",
     "passport-saml-metadata": "^2.5.0",
     "unfuck-utf8-headers-middleware": "^1.0.1",
+    "winston": "^3.6.0",
     "xml-crypto": "^2.1.3"
   }
 }
