--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@next/eslint-plugin-next": "^12.1.0",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^17.0.16",
     "os-name": "^5.0.1"
