--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,6 +171,7 @@ jobs:
           root: ~/project
           paths:
             - build
+            - sourcemap
 
   push_backend:
     executor: backend_build
