--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,6 +161,17 @@ jobs:
           name: "Build backend image"
           command: "bin/build-docker-backend.sh"
       - run:
+          name: "Debug directories"
+          command: |
+            echo "Current"
+            ls -la
+            echo "Backend"
+            ls -la ./backend
+            echo "Sourcemap"
+            ls -la ./backend/sourcemap
+            echo ".."
+            ls -la ..
+      - run:
           name: "Persist image"
           command: |
             REV="$CIRCLE_WORKFLOW_ID-$(git rev-parse --verify HEAD)"
