fix circleci, actually add apexcharts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ jobs:
           root: ~/project
           paths:
             - build
-            - backend/sourcemap
+            - backend/sourcemp
 
   push_backend:
     executor: backend_build
