--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
     "@zeit/next-typescript": "^1.1.1",
+    "apexcharts": "^3.33.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.25.0",
     "compression": "^1.7.4",
@@ -75,6 +76,7 @@
     "nookies": "^2.5.2",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.1",
     "react-ga": "^3.3.0",
