--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,6 +72,7 @@
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
     "next-optimized-images": "^2.6.2",
+    "next-seo": "^5.1.0",
     "nookies": "^2.5.2",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
