fix user cronjobs not saving progress

--- a/helm/templates/fetch-user-app-datum-cronjob.yml
+++ b/helm/templates/fetch-user-app-datum-cronjob.yml
@@ -32,3 +32,5 @@ spec:
                     secretKeyRef:
                       name: redis
                       key: redis-password
+                - name: CONFIG_NAME
+                  value: "userAppDatum"
