--- a/helm/templates/fetch-user-field-values-cronjob.yml
+++ b/helm/templates/fetch-user-field-values-cronjob.yml
@@ -32,3 +32,6 @@ spec:
                     secretKeyRef:
                       name: redis
                       key: redis-password
+                - name: CONFIG_NAME
+                  value: "userFieldValues"
+
