--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,10 @@
     "formik-mui": "^4.0.0-alpha.3",
     "formik-mui-lab": "^1.0.0-alpha.3",
     "graphql": "^16.3.0",
-    "imagemin": "^8.0.1",
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "imagemin-webp": "^7.0.0",
     "immer": "^9.0.12",
     "isomorphic-unfetch": "^3.1.0",
