add some tag tests; reshuffling some test stuff

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "cd node_modules/cwebp-bin/lib && node install.js && cd ../../..",
+    "postinstall": "rm -r node_modules/apollo-language-server/node_modules/graphql && cd node_modules/cwebp-bin/lib && node install.js && cd ../../..",
     "dev": "node server.js",
     "build": "NODE_ENV=production next build",
     "export": "next export",
@@ -21,7 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.5.10",
+    "@apollo/client": "^3.6.1",
     "@date-io/core": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
     "@emotion/react": "^11.9.0",
@@ -55,7 +55,7 @@
     "formik": "^2.2.9",
     "formik-mui": "^4.0.0-alpha.3",
     "formik-mui-lab": "^1.0.0-alpha.3",
-    "graphql": "^16.3.0",
+    "graphql": "^15.6.1",
     "imagemin": "^7.0.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
@@ -104,7 +104,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-jsx": "^3.4.4",
     "@types/testing-library__cypress": "^5.0.8",
-    "apollo": "^2.33.10",
+    "apollo": "^2.33.4",
     "cors": "^2.8.5",
     "cypress": "^6.0.1",
     "cypress-image-snapshot": "^4.0.0",
