quick hack to send BAI completions for liu.se monthly

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "sync-tmc-users": "node ./dist/bin/syncTMCUsers.js",
     "send-ai-statistics": "node ./dist/bin/sendAiStatistics.js",
     "course-stats-emailer": "node ./dist/bin/courseStatsEmailer.js",
+    "linkoping-stats-emailer": "node ./dist/bin/linkopingStatsEmailer.js",
     "import-organizations": "node ./dist/bin/importOrganizations.js",
     "parse-file": "node ./dist/bin/parseFile.js",
     "start-kafka-consumers": "concurrently --kill-others --restart-tries 2 npm:kafka-consumer-*",
@@ -31,7 +32,7 @@
     "seedExercises": "node ./dist/bin/seedExercises.js",
     "createExports": "ts-node ./bin/createExports.ts",
     "kafka-bridge": "node ./dist/bin/kafkaBridge.js",
-    "background-emailer": "node ./dist/bin/backgroundEmailer.js",
+    "background-emailer": "node ./dist/bin/backgroundEmailer.js",    
     "update-course-statuses": "node ./dist/bin/updateCourseStatuses.js",
     "remove-duplicate-completions": "node ./dist/bin/removeDuplicateCompletions.js",
     "download-env": "node ./bin/downloadEnv.js",
