--- a/backend/package.json
+++ b/backend/package.json
@@ -59,8 +59,8 @@
     "@sentry/node": "^6.19.6",
     "@types/compression": "^1.7.2",
     "@types/graphql-upload": "^8.0.11",
-    "@types/lodash": "^4.14.181",
-    "@types/luxon": "^2.3.1",
+    "@types/lodash": "^4.14.182",
+    "@types/luxon": "^2.3.2",
     "@types/morgan": "^1.9.3",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^4.0.11",
@@ -77,7 +77,7 @@
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.3",
-    "graphql": "^16.3.0",
+    "graphql": "16.3.0",
     "graphql-scalars": "^1.17.0",
     "graphql-upload": "^13.0.0",
     "helmet": "^5.0.2",
@@ -92,7 +92,7 @@
     "nexus": "^1.3.0",
     "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.12.0",
-    "nodemailer": "^6.7.3",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pg-query-stream": "^4.2.3",
     "redis": "^4.0.6",
@@ -121,14 +121,17 @@
     "jest": "^27.5.1",
     "jest-junit": "^13.1.0",
     "jest-mock": "^27.5.1",
-    "locate-path": "^7.1.0",
+    "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
-    "nock": "^13.2.4",
+    "nock": "^13.2.7",
     "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
+  },
+  "overrides": {
+    "graphql": "16.3.0"
   }
 }
