--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:ci": "jest --ci --runInBand --coverage --reporters=default --reporters=jest-junit",
+    "test": "TZ=UTC jest",
+    "test:ci": "TZ=UTC jest --ci --runInBand --coverage --reporters=default --reporters=jest-junit",
     "upgrade-interactive": "npx npm-check --update",
     "fetch-ai-completions": "node ./dist/bin/fetchAiCompletions.js",
     "fetch-organizations": "node ./dist/bin/importOrganizations.js",
