removeduplicateexercisecompletions script (not cronjobed for now)

--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "background-emailer": "node ./dist/bin/backgroundEmailer.js",
     "update-course-statuses": "node ./dist/bin/updateCourseStatuses.js",
     "remove-duplicate-completions": "node ./dist/bin/removeDuplicateCompletions.js",
+    "remove-duplicate-exercise-completions": "node ./dist/bin/removeDuplicateExerciseCompletions.js",
     "download-env": "node ./bin/downloadEnv.js",
     "dev": "npm run download-env && ts-node-dev --transpile-only ./app.ts",
     "dev:typecheck": "tsc --noEmit --watch",
