--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -6,19 +6,26 @@ config:
   avoidOptionals:
     field: true
   nonOptionalTypeName: true
+  dedupeFragments: true
+hooks:
+  afterAllFileWrite:
+    - prettier --write
 generates:
   ./graphql/generated/index.ts:
     pluckConfig:
       modules:
         - name: "@apollo/client"
           identifier: gql
-    config:
-      dedupeFragments: true
     plugins:
+      - add:
+          placement: "prepend"
+          content:
+            - "/**"
+            - " * This is an automatically generated file."
+            - " * Run `npm run graphql-codegen` to regenerate."
+            - " **/"
+      - time
       - typescript
       - typescript-operations
       - fragment-matcher
       - typed-document-node
-    hooks:
-      afterOneFileWrite:
-        - prettier --write
