--- a/frontend/package.json
+++ b/frontend/package.json
@@ -93,9 +93,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.2.1",
     "@graphql-codegen/cli": "2.11.3",
     "@graphql-codegen/fragment-matcher": "^3.3.0",
     "@graphql-codegen/gql-tag-operations-preset": "^1.5.3",
+    "@graphql-codegen/time": "^3.2.1",
     "@graphql-codegen/typescript": "2.7.2",
     "@graphql-codegen/typescript-document-nodes": "^2.3.2",
     "@graphql-codegen/typescript-operations": "^2.5.2",
