More refactoring from id to slug in register form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
       "**/.git/objects/**": true,
       "**/.git/subtree-cache/**": true,
       "**/.hg/store/**": true
-    }
+    },
+    "[javascript]": {
+      "editor.tabSize": 2
+  }
 }
