--- a/backend/package.json
+++ b/backend/package.json
@@ -28,8 +28,10 @@
     "generate:prisma": "prisma generate",
     "kafka-status": "node ./dist/bin/kafkaStatus.js",
     "seed": "node ./dist/bin/seed.js",
+    "seedAll": "npm run seed && npm run seedPoints && npm run seedExercises && npm run seedCompletions",
     "seedPoints": "node ./dist/bin/seedPoints.js",
     "seedExercises": "node ./dist/bin/seedExercises.js",
+    "seedCompletions": "node ./dist/bin/seedCompletions.js",
     "createExports": "ts-node ./bin/createExports.ts",
     "kafka-bridge": "node ./dist/bin/kafkaBridge.js",
     "background-emailer": "node ./dist/bin/backgroundEmailer.js",
