--- a/helm/templates/linkoping-stats-mailer-cronjob.yml
+++ b/helm/templates/linkoping-stats-mailer-cronjob.yml
@@ -2,19 +2,17 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: linkoping-stats-emailer
-  labels:
-    {{- include "helm.labels" . | nindent 4 }}
+  labels: { { - include "helm.labels" . | nindent 4 } }
 spec:
-  # first day of month at 12:00pm
-  schedule: "0 12 1 * *"
+  # 16th day of month at 12:00pm
+  schedule: "0 12 16 * *"
   startingDeadlineSeconds: 3600
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 3
   jobTemplate:
     metadata:
-      labels:
-        {{- include "helm.selectorLabels" . | nindent 8 }}
+      labels: { { - include "helm.selectorLabels" . | nindent 8 } }
     spec:
       activeDeadlineSeconds: 7200
       template:
@@ -25,8 +23,8 @@ spec:
               image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
               command: ["sh", "-c", "npm run linkoping-stats-emailer"]
               envFrom:
-              - secretRef:
-                  name: backend-secret
+                - secretRef:
+                    name: backend-secret
               env:
                 - name: REDIS_PASSWORD
                   valueFrom:
