fix build; use cloud-sdk:latest where applicable; still doesn't install gke-gcloud-auth-plugin

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
 
   build_frontend:
     docker:
-      - image: google/cloud-sdk
+      - image: google/cloud-sdk:latest
     steps:
       - checkout
       - setup_remote_docker
@@ -228,7 +228,7 @@ jobs:
   #         command: "bin/push-docker-auth-image.sh"
   deploy_to_production:
     docker:
-      - image: google/cloud-sdk
+      - image: google/cloud-sdk:latest
     steps:
       - checkout
       - setup_remote_docker
