--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - run:
           name: "Push image if on master/staging"
           command: "bin/push-docker-frontend-image.sh"
+    resource_class: large
 
   prepare_backend_test:
     executor: backend_test
@@ -70,6 +71,7 @@ jobs:
           root: ~/project
           paths:
             - .
+    resource_class: large
 
   test_backend:
     executor: backend_test
@@ -172,6 +174,7 @@ jobs:
           paths:
             - build
             - backend/sourcemap
+    resource_class: large
 
   push_backend:
     executor: backend_build
@@ -187,6 +190,7 @@ jobs:
       - run:
           name: "Push image if on master/staging"
           command: "bin/push-docker-backend-image.sh"
+    resource_class: large
 
   # build_auth:
   #   docker:
@@ -240,6 +244,7 @@ jobs:
       - run:
           name: "Deploy"
           command: "bin/ci-update-deployments.sh"
+    resource_class: large
 
 workflows:
   version: 2
