--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
 orbs:
-  helm: cimg/helm@1.1.2
-  docker: cimg/docker@1.7.0
-  jq: cimg/jq@2.2.0
-  node: cimg/node@5.0.0
+  helm: circleci/helm@1.1.2
+  docker: circleci/docker@2.1.3
+  jq: circleci/jq@2.2.0
+  node: circleci/node@5.0.2
 executors:
   backend_test:
     docker:
@@ -20,7 +20,7 @@ executors:
 jobs:
   code_style:
     docker:
-      - image: circleci/node:14
+      - image: cimg/node:14.18.3
     steps:
       - checkout
       - node/install-packages
