--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,6 +18,7 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "plugins": [{ "name": "nexus/typescript-language-service" }]
     // "typeRoots": ["node_modules/@types", "types"]
   },
