enable json import in production as well

--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -21,6 +21,7 @@
     "inlineSources": true,
     "noEmitHelpers": true,
     "importHelpers": true,
+    "resolveJsonModule": true,
     "sourceRoot": "/"
   },
   "include": [".", "types.d.ts"],
