add user search box to user summary; batch frontend graphql

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -44,7 +44,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true
+    "incremental": true,
+    "maxNodeModuleJsDepth": 10
   },
   "exclude": [
     "node_modules",
