--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "express": "^4.17.3",
+    "extract-files": "^13.0.0",
     "formik": "^2.2.9",
     "formik-mui": "^4.0.0-alpha.3",
     "formik-mui-lab": "^1.0.0-alpha.3",
