Add docs and seed commands

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,13 +12,27 @@ DB_NAME=x
 DB_PASSWORD=X
 DB_PORT=x
 DB_USER=x
+KAFKA_BRIDGE_SECRET=x
+KAFKA_HOST=x
 
 DATABASE_URL=postgres://a:b@localhost:12345/fake?schema=nonexistent
 SEARCH_PATH=X
+SENTRY_DSN=x
+NEW_RELIC_NO_CONFIG_FILE=x
+NEW_RELIC_LICENSE_KEY=x
+NEW_RELIC_APP_NAME=x
+NEW_RELIC_LOG_ENABLED=x
+
+PUBLIC_KEY=x
+PUBLIC_KEY_TEST=x
+PRIVATE_KEY=x
+PRIVATE_KEY_TEST=x
 
 GOOGLE_CLOUD_STORAGE_BUCKET=x
 GOOGLE_CLOUD_STORAGE_PROJECT=x
 GOOGLE_CLOUD_STORAGE_KEYFILE=x
+
+HY_ORGANIZATION_ID=x
 
 UPDATE_USER_SECRET=secret
 BACKEND_URL=http://localhost:4000
