--- a/backend/package.json
+++ b/backend/package.json
@@ -54,37 +54,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@devoxa/prisma-relay-cursor-connection": "^2.2.1",
+    "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
     "@google-cloud/storage": "^5.19.1",
     "@prisma/client": "2.23.0",
     "@sentry/integrations": "^6.19.6",
     "@sentry/node": "^6.19.6",
     "@types/compression": "^1.7.2",
-    "@types/graphql-upload": "^8.0.11",
-    "@types/lodash": "^4.14.182",
+    "@types/graphql-upload": "^8.0.12",
+    "@types/lodash": "^4.14.187",
     "@types/luxon": "^2.3.2",
     "@types/morgan": "^1.9.3",
-    "@types/nodemailer": "^6.4.4",
-    "@types/redis": "^4.0.11",
+    "@types/nodemailer": "^6.4.6",
     "@types/shortid": "0.0.29",
     "@types/uuid": "^8.3.4",
     "@types/websocket": "^1.0.5",
-    "@types/yup": "^0.29.14",
-    "apollo-server-core": "^3.9.0",
-    "apollo-server-express": "^3.9.0",
+    "apollo-server-core": "^3.10.4",
+    "apollo-server-express": "^3.10.4",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
-    "concurrently": "^7.2.2",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "graphql": "16.5.0",
-    "graphql-scalars": "^1.17.0",
+    "graphql-scalars": "^1.20.0",
     "graphql-upload": "^13.0.0",
     "helmet": "^5.1.0",
     "JSONStream": "^1.3.5",
-    "knex": "^2.1.0",
+    "knex": "^2.3.0",
     "lodash": "^4.17.20",
     "luxon": "^2.4.0",
     "micromustache": "^8.0.3",
@@ -93,28 +91,29 @@
     "newrelic": "^8.14.1",
     "nexus": "^1.3.0",
     "nexus-plugin-prisma": "^0.35.0",
-    "node-rdkafka": "^2.13.0",
-    "nodemailer": "^6.7.5",
-    "pg": "^8.7.3",
-    "pg-query-stream": "^4.2.3",
-    "redis": "^4.1.0",
-    "sharp": "^0.30.6",
+    "node-rdkafka": "^2.14.0",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
+    "pg-query-stream": "^4.2.4",
+    "redis": "^4.3.1",
+    "sharp": "^0.31.1",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
     "websocket": "^1.0.34",
-    "winston": "^3.7.2",
+    "winston": "^3.8.2",
     "winston-sentry-log": "^1.0.26",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
+    "@types/express": "^4.17.14",
     "@types/faker": "^5.5.9",
     "@types/jest": "^28.1.2",
     "@types/mime-types": "^2.1.1",
+    "@types/sharp": "^0.31.0",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
@@ -125,13 +124,13 @@
     "jest-mock": "^28.1.1",
     "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
-    "nock": "^13.2.7",
+    "nock": "^13.2.9",
     "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^28.0.5",
-    "ts-node": "^10.8.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "overrides": {
     "graphql": "16.5.0"
