--- a/backend/package.json
+++ b/backend/package.json
@@ -55,14 +55,15 @@
   "license": "ISC",
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
-    "@google-cloud/storage": "^5.19.1",
+    "@google-cloud/storage": "^6.6.0",
     "@prisma/client": "2.23.0",
-    "@sentry/integrations": "^6.19.6",
-    "@sentry/node": "^6.19.6",
+    "@sentry/integrations": "^6.19.7",
+    "@sentry/node": "^6.19.7",
+    "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/graphql-upload": "^8.0.12",
     "@types/lodash": "^4.14.187",
-    "@types/luxon": "^2.3.2",
+    "@types/luxon": "^3.0.2",
     "@types/morgan": "^1.9.3",
     "@types/nodemailer": "^6.4.6",
     "@types/shortid": "0.0.29",
@@ -70,7 +71,7 @@
     "@types/websocket": "^1.0.5",
     "apollo-server-core": "^3.10.4",
     "apollo-server-express": "^3.10.4",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "compression": "^1.7.4",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5",
@@ -80,15 +81,15 @@
     "graphql": "16.5.0",
     "graphql-scalars": "^1.20.0",
     "graphql-upload": "^13.0.0",
-    "helmet": "^5.1.0",
+    "helmet": "^6.0.0",
     "JSONStream": "^1.3.5",
     "knex": "^2.3.0",
     "lodash": "^4.17.20",
-    "luxon": "^2.4.0",
+    "luxon": "^3.1.0",
     "micromustache": "^8.0.3",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "newrelic": "^8.14.1",
+    "newrelic": "^9.5.0",
     "nexus": "^1.3.0",
     "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.14.0",
@@ -98,7 +99,7 @@
     "redis": "^4.3.1",
     "sharp": "^0.31.1",
     "shortid": "^2.2.16",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "websocket": "^1.0.34",
     "winston": "^3.8.2",
     "winston-sentry-log": "^1.0.26",
@@ -111,23 +112,24 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.14",
     "@types/faker": "^5.5.9",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^29.2.1",
+    "@types/jsonstream": "^0.8.30",
     "@types/mime-types": "^2.1.1",
     "@types/sharp": "^0.31.0",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
     "graceful-fs": "^4.2.10",
-    "graphql-request": "^4.3.0",
-    "jest": "^28.1.1",
-    "jest-junit": "^13.2.0",
-    "jest-mock": "^28.1.1",
+    "graphql-request": "^5.0.0",
+    "jest": "^29.2.2",
+    "jest-junit": "^14.0.1",
+    "jest-mock": "^29.2.2",
     "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
     "nock": "^13.2.9",
     "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
-    "ts-jest": "^28.0.5",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
