--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,25 +20,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.6.8",
-    "@date-io/core": "^2.13.1",
-    "@date-io/luxon": "^2.13.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@apollo/client": "^3.7.1",
+    "@date-io/core": "^2.16.0",
+    "@date-io/luxon": "^2.16.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.10",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/mdx": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@monaco-editor/react": "^4.4.6",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.8.5",
+    "@mui/material": "^5.10.12",
     "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^12.1.6",
     "@zeit/next-typescript": "^1.1.1",
@@ -63,24 +63,24 @@
     "luxon": "^2.5.0",
     "material-ui-confirm": "^3.0.7",
     "module-resolver": "^1.0.0",
-    "monaco-editor": "^0.33.0",
+    "monaco-editor": "^0.34.1",
     "morgan": "^1.10.0",
     "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
     "next-optimized-images": "^2.6.2",
-    "next-seo": "^5.3.0",
+    "next-seo": "^5.13.0",
     "nookies": "^2.5.2",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
-    "react-hook-form": "^7.32.2",
+    "react-hook-form": "^7.38.0",
     "responsive-loader": "^2.3.0",
-    "sharp": "^0.30.6",
-    "styled-jsx": "^5.0.2",
+    "sharp": "^0.31.1",
+    "styled-jsx": "^5.1.0",
     "tmc-client-js": "0.0.9",
     "url": "^0.11.0",
     "uuid": "^8.3.2",
@@ -90,11 +90,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.2.1",
-    "@graphql-codegen/cli": "2.11.3",
+    "@graphql-codegen/cli": "^2.13.10",
     "@graphql-codegen/fragment-matcher": "^3.3.1",
-    "@graphql-codegen/gql-tag-operations-preset": "^1.5.3",
+    "@graphql-codegen/gql-tag-operations-preset": "^1.7.0",
     "@graphql-codegen/time": "^3.2.1",
-    "@graphql-codegen/typescript": "2.7.2",
+    "@graphql-codegen/typescript": "^2.8.1",
     "@graphql-codegen/typescript-document-nodes": "^2.3.6",
     "@graphql-codegen/typescript-operations": "^2.5.6",
     "@types/lodash": "^4.14.187",
@@ -111,7 +111,7 @@
     "cors": "^2.8.5",
     "express-graphql": "^0.12.0",
     "source-map-support": "^0.5.21",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "overrides": {
     "graphql": "16.5.0"
