--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,11 +39,12 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.10.12",
-    "@next/bundle-analyzer": "^12.1.6",
-    "@next/mdx": "^12.1.6",
+    "@next/bundle-analyzer": "^13.0.1",
+    "@next/font": "^13.0.2-canary.0",
+    "@next/mdx": "^13.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-upload-client": "^17.0.0",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "extract-files": "^13.0.0",
@@ -51,10 +52,10 @@
     "formik-mui": "^4.0.0-alpha.3",
     "formik-mui-lab": "^1.0.0-alpha.3",
     "graphql": "16.5.0",
-    "imagemin": "^7.0.1",
-    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^9.0.0",
+    "imagemin-svgo": "^10.0.1",
     "imagemin-webp": "^7.0.0",
     "immer": "^9.0.16",
     "isomorphic-unfetch": "^3.1.0",
@@ -65,7 +66,7 @@
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.34.1",
     "morgan": "^1.10.0",
-    "next": "^12.1.6",
+    "next": "^13.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
@@ -77,13 +78,13 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
-    "react-hook-form": "^7.38.0",
-    "responsive-loader": "^2.3.0",
+    "react-hook-form": "^7.39.0",
+    "responsive-loader": "^3.1.1",
     "sharp": "^0.31.1",
     "styled-jsx": "^5.1.0",
     "tmc-client-js": "0.0.9",
     "url": "^0.11.0",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "webp-loader": "^0.6.0",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
@@ -97,6 +98,7 @@
     "@graphql-codegen/typescript": "^2.8.1",
     "@graphql-codegen/typescript-document-nodes": "^2.3.6",
     "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@svgr/webpack": "^6.5.1",
     "@types/lodash": "^4.14.187",
     "@types/luxon": "^2.4.0",
     "@types/mdx-js__react": "^1.5.5",
@@ -110,7 +112,6 @@
     "apollo": "^2.34.0",
     "cors": "^2.8.5",
     "express-graphql": "^0.12.0",
-    "source-map-support": "^0.5.21",
     "typescript": "^4.8.4"
   },
   "overrides": {
