--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@next/eslint-plugin-next": "^12.3.1",
+    "@next/eslint-plugin-next": "^13.0.1",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.11.9",
     "os-name": "^5.0.1"
@@ -14,9 +14,11 @@
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
+    "eslint-plugin-css": "^0.6.0",
     "eslint-plugin-eslint-custom-rules": "file:eslint-custom-rules",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-styled-components-a11y": "^1.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "typescript": "^4.8.4"
