--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,26 +37,21 @@
     "@mdx-js/react": "^2.1.5",
     "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.10.9",
-    "@mui/lab": "^5.0.0-alpha.87",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.12",
+    "@mui/x-date-pickers": "^5.0.7",
     "@next/bundle-analyzer": "^13.0.1",
-    "@next/font": "^13.0.2-canary.0",
+    "@next/font": "^13.0.2-canary.3",
     "@next/mdx": "^13.0.1",
-    "@zeit/next-typescript": "^1.1.1",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.1.3",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "extract-files": "^13.0.0",
     "formik": "^2.2.9",
-    "formik-mui": "^4.0.0-alpha.3",
-    "formik-mui-lab": "^1.0.0-alpha.3",
+    "formik-mui": "^5.0.0-alpha.0",
+    "formik-mui-x-date-pickers": "^0.0.1",
     "graphql": "16.5.0",
-    "imagemin": "^8.0.1",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1",
-    "imagemin-webp": "^7.0.0",
     "immer": "^9.0.16",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
@@ -67,10 +62,7 @@
     "monaco-editor": "^0.34.1",
     "morgan": "^1.10.0",
     "next": "^13.0.1",
-    "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
-    "next-fonts": "^1.5.1",
-    "next-optimized-images": "^2.6.2",
     "next-seo": "^5.13.0",
     "nookies": "^2.5.2",
     "papaparse": "^5.3.2",
@@ -79,7 +71,6 @@
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
     "react-hook-form": "^7.39.0",
-    "responsive-loader": "^3.1.1",
     "sharp": "^0.31.1",
     "styled-jsx": "^5.1.0",
     "tmc-client-js": "0.0.9",
