--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,11 +37,10 @@
     "@mdx-js/react": "^2.1.5",
     "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.10.9",
-    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.7",
     "@next/bundle-analyzer": "^13.0.1",
-    "@next/font": "^13.0.2-canary.3",
+    "@next/font": "https://gitpkg.now.sh/vercel/next.js/packages/font?canary",
     "@next/mdx": "^13.0.1",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.1.3",
@@ -61,9 +60,8 @@
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.34.1",
     "morgan": "^1.10.0",
-    "next": "^13.0.1",
-    "next-env": "^1.1.1",
-    "next-seo": "^5.13.0",
+    "next": "^13.0.2",
+    "next-seo": "^5.14.0",
     "nookies": "^2.5.2",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
@@ -95,17 +93,12 @@
     "@types/mdx-js__react": "^1.5.5",
     "@types/mime-types": "^2.1.1",
     "@types/papaparse": "^5.3.5",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-fontawesome": "^1.6.5",
-    "@types/styled-jsx": "^3.4.4",
+    "@types/react-is": "^17.0.3",
     "@types/uuid": "^8.3.4",
-    "apollo": "^2.34.0",
     "cors": "^2.8.5",
-    "express-graphql": "^0.12.0",
     "typescript": "^4.8.4"
-  },
-  "overrides": {
-    "graphql": "16.5.0"
   }
 }
