--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "dependencies": {
-    "@next/eslint-plugin-next": "^13.0.1",
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.11.9",
-    "os-name": "^5.0.1"
-  },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@next/eslint-plugin-next": "^13.0.2",
+    "@types/mime-types": "^2.1.1",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
-    "eslint-plugin-css": "^0.6.0",
     "eslint-plugin-eslint-custom-rules": "file:eslint-custom-rules",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-styled-components-a11y": "^1.0.0",
     "husky": "^8.0.1",
