--- a/backend/package.json
+++ b/backend/package.json
@@ -69,7 +69,7 @@
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
+    "graphql": "16.6.0",
     "graphql-scalars": "^1.20.0",
     "graphql-upload": "^13.0.0",
     "helmet": "^6.0.0",
@@ -133,6 +133,9 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
+  },
+  "overrides": {
+    "graphql": "16.6.0"
   }
 }
